UmDESK text formatting

--- a/umdesk.html
+++ b/umdesk.html
@@ -501,8 +501,8 @@ img {
 <h4><a name="2.3 Log in"></a>2.3 Log in<a class="anchorlink" href="#2.3	Log in"></a></h4>
 <p>In order to configure and administer the UmDESK, you have to attach monitor, keyboard, mouse or login into device remotely over SSH. External Interface configured to obtain IP address via DHCP and also has a static <u>192.168.50.100</u></p>
 
-<h3>Note:</h3>
-<p>Small inch monitors might have a displaying problem with console mode resolution. </p>
+
+<p><strong>NOTE:</strong> Small inch monitors might have a displaying problem with console mode resolution. </p>
 <p>just add</p>
 <pre><code>blacklist gma500_gfx
 </code></pre>
@@ -514,8 +514,8 @@ img {
 
 <p>Connect laptop to the UmDESK via Ethernet cable.</p>
 
-<h3>Note:</h3>
-<p>Before startng to work with the device, set up IP address on laptop like <u>192.168.50.200</u>
+
+<p><strong>NOTE:</strong> Before startng to work with the device, set up IP address on laptop like <u>192.168.50.200</u>
 </p>
 <ol>
 <li>1. Run PuTTY
