--- a/how_to's.html
+++ b/how_to's.html
@@ -791,7 +791,7 @@ autoreconf -i
 make
 cd ..
 </code></pre>
-
+<p>GPRS configuration can be configured through the VTY telnet interface. Refer to <a href="http://openbsc.osmocom.org/trac/wiki/osmo-nitb_VTY#gprsmodenonegprsegprs">osmocom</a> for details</p>
 <a name="9. UmTRX 2.2 Box STL file"></a><h4>9. UmTRX 2.2 Box STL file<a class="anchorlink" href="#9. UmTRX 2.2 Box STL file"></a></h4>
 
 <p>Here is the 3D box model for the UmTRX 2.2 </p>
