--- a/soft_conf.html
+++ b/soft_conf.html
@@ -659,7 +659,7 @@ Possible values are:
 <ul>
 <li>How large should the hysteresis be, i.e. to prevent continuous handover back and forth</li>
 </ul>
-<p><strong>handover maximum distance &lt;0-9999&gt; ¶</strong></p>
+<p><strong>handover maximum distance &lt;0-9999&gt;</strong></p>
 <ul>
 <li>What is the maximum distance from a BTS, after which we try to perform distance handover?</li>
 </ul>
@@ -844,8 +844,8 @@ Set the physical channel configuration of this GSM on-air timeslot:</p>
 
 <p><strong>NOTE:</strong> More configuration parameters available at the VTY telnet interface. 
 Refer to Osmocom documentation for details:</p>
-<p>•	<a href="http://openbsc.osmocom.org/trac/">OpenBSC home page</a></p>
-<p>•	<a href="http://openbsc.osmocom.org/trac/wiki/osmo-nitb_VTY">OsmoNITB parameters</a></p>
+<p><a href="http://openbsc.osmocom.org/trac/">OpenBSC home page</a></p>
+<p><a href="http://openbsc.osmocom.org/trac/wiki/osmo-nitb_VTY">OsmoNITB parameters</a></p>
 
 <h4>2.4 Runtime logs</h4>
  <br>
