--- a/soft_conf.html
+++ b/soft_conf.html
@@ -1277,7 +1277,7 @@ Licensed under the MPL(Mozilla Public License Version 1.0)</p>
 <pre><code>    shell&gt; sudo sv restart freeswitch
 </code></pre>
 
-<p><strong>NOTE</strong>:  If your system already in production you should use  <strong>fs_cli</strong> for the  restarting</p>
+<p><strong>NOTE</strong>:  If your system already in production you should use  <strong>fs_cli</strong> for restarting</p>
 <h5>Change directory</h5>
 <pre><code>    shell&gt; cd ../../bin/
 </code></pre>
