--- a/umsite.html
+++ b/umsite.html
@@ -402,7 +402,7 @@ img {
 <h4>Power supply</h4>
 <p>Fairwaves does not provide the power supply. This is because, different places use different power sources. Fairwaves products compatible with any power sources including solar panels as well.	 </p>
 <h4>Antenna</h4>
-<p>Faiwaves does not provide an antenna. You can use any other antenna suitable for 850/900/1800/1900 GSM frequency band with N-male connectors</p>
+<p>Faiwaves does not provide GSM antennas. You can use any other antenna suitable for 850/900/1800/1900 GSM frequency band with N-male connectors</p>
 <h4><a name="1.2 Software specification"></a>1.2 Software specification<a class="anchorlink" href="#1.2 Software specification"></a></h4>
 <br>
 <h4>Number of Transceivers</h4>
