weird signs fix

--- a/fairwaves_architecture.html
+++ b/fairwaves_architecture.html
@@ -398,8 +398,7 @@ create and interconnect networks. These are:</p>
 backhaul can be employed and highly specialist skills are not needed.</p>
 <p>SS7 is only used where this is required for interconnection with existing operator networks, and this is typically
 implemented via Fairwaves hosted UmCORE Cloud services.</p>
-<p>Integration with operator billing and real-time settlement systems is made possible via the CAMEL and Diameter
-— both offline (Rf) and online (Ro) interfaces — protocols.</p>
+<p>Integration with operator billing and real-time settlement systems is made possible via the CAMEL and Diameter, both offline (Rf) and online (Ro) interfaces protocols.</p>
 <h1><a name="Services"></a>Services<a class="anchorlink" href="#Services"></a></h1>
 <p><strong>Voice and SMS</strong></p>
 <p>Affordable, reliable voice and SMS communications are the primary services supported by the Fairwaves Architecture.</p>
